2007-12-22  ARAKI Yasuhiro  <ar@debian.org>

	* doc/HowToRakeTest.wiki: New file.

	* app/controllers/admin/article_controller.rb (Admin::add_article): Cleanup.

	* test/functional/admin/article_controller_test.rb (Admin::test_add_article): Fix.

	* app/views/shared/default/comment-enrollment.rhtml: add <br clear="all">
	* app/views/shared/default/comment2.rhtml: add <br clear="all">

2007-12-21  ARAKI Yasuhiro  <araki@araki.us>

	* doc/Ping.wiki: add example ping receiver URL.

	* app/controllers/admin/article_controller.rb (Admin::add_article): When no author is defined, and redirect to manag_aurhor.
	* app/views/layouts/login.rhtml: likewise.
	* app/controllers/admin/system_controller.rb (Admin::manage_author): Fix to show flash['notice'].

	* app/views/admin/shared/edit_don_env.rhtml: Add information to help initial-setup.

	* app/views/help/first_setup.rhtml: Add information.

2007-12-20  ARAKI Yasuhiro  <araki@araki.us>
	
	* doc/PinggerIntroduction.wiki: updated for BackgrounDRb Pinnger.
	* INSTALL: add initial password setting in config/environment.rb
	* config/environment.example.rb: add example of 'config/environment.rb'.

2007-12-19  ARAKI Yasuhiro  <ar@debian.org>

	* test/functional/notes_controller_test.rb (NotesControllerTest::test_index): Fix to use don_get_config.default_theme.
	* test/integration/browse_story_test.rb (BrowseStoryTest::test_fromtop): 
	* test/fixtures/don_envs.yml (first): Change default_theme to 'MT'.

	* doc/HowToPrepare.wiki: add description for librd-ruby.

	* vendor/plugins/backgroundrb: New svn:external entry to use backgroundrb.
	* test/bdrb_test_helper.rb, script/backgroundrb, config/backgroundrb.yml, lib/workers: New file to use BackgounDRb for Pingger.

2007-11-27  ARAKI Yasuhiro  <ar@debian.org>

	* app/models/author.rb (Author::self.authenticate): Change for apply DEPRICATION on rails2.0

2007-11-12  ARAKI Yasuhiro  <ar@debian.org>

	* donrails/tool/update-custom.sh (SCRIPTNAME): Change to use 'install -d'
